# ChangeLog for games-emulation/bsnes
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2

*bsnes-0.059 (07 Jan 2010)

  07 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> +bsnes-0.059.ebuild:
  Bumped.

  21 Dec 2009; Michał Ziąbkowski <mziab@o2.pl> metadata.xml:
  Fixed metadata.xml.

  09 Dec 2009; Michał Ziąbkowski <mziab@o2.pl> -bsnes-0.053.ebuild,
  -bsnes-0.054.ebuild, -bsnes-0.055.ebuild, +bsnes-0.058.ebuild:
  Bumped. Removed cruft.

  23 Nov 2009; Michał Ziąbkowski <mziab@o2.pl> +bsnes-0.057.ebuild:
  Bumped.

  04 Nov 2009; Michał Ziąbkowski <mziab@o2.pl> +bsnes-0.055.ebuild,
  metadata.xml:
  Bumped. Now with optional Super Gameboy support.

  19 Oct 2009; Michał Ziąbkowski <mziab@o2.pl> +bsnes-0.054.ebuild:
  Bumped.

  18 Oct 2009; Michał Ziąbkowski <mziab@o2.pl> -bsnes-0.052.ebuild,
  +bsnes-0.053.ebuild, metadata.xml:
  Bumped. Removed previous version. Added snesfilter flag for enabling extra
  image filters. Made snesreader optional, but enabled by default.

  08 Oct 2009; Michał Ziąbkowski <mziab@o2.pl> bsnes-0.052.ebuild:
  Fixed whitespace.

  03 Oct 2009; Michał Ziąbkowski <mziab@o2.pl> -bsnes-0.050.ebuild,
  -bsnes-0.051.ebuild, metadata.xml:
  Removed cruft. Updated metadata.xml.

  29 Sep 2009; Michał Ziąbkowski <mziab@o2.pl> +bsnes-0.052.ebuild:
  Bumped.

  28 Sep 2009; Michał Ziąbkowski <mziab@o2.pl> +bsnes-0.051.ebuild:
  Bumped. New license. Decompression moved to new helper library. Added USE
  flag for debugger.

  25 Aug 2009; Michał Ziąbkowski <mziab@o2.pl> -bsnes-0.048.ebuild,
  +bsnes-0.050.ebuild:
  Bumped. Removed previous version.

  21 Jul 2009; Michał Ziąbkowski <mziab@o2.pl> bsnes-0.048.ebuild:
  Fixed disabling modules.

  20 Jul 2009; Michał Ziąbkowski <mziab@o2.pl> -bsnes-0.047.ebuild,
  +bsnes-0.048.ebuild:
  Bumped. Removed cruft.

  07 Jun 2009; Michał Ziąbkowski <mziab@o2.pl> -bsnes-0.046.ebuild,
  -files/bsnes-0.046-makefile.patch, +bsnes-0.047.ebuild,
  +files/bsnes-0.047-makefile.patch: