@@ -2,8 +2,10 @@ AUX bsnes-0.047-makefile.patch 390 RMD160 495cbb92696a76ebcf139667218b2db88fbfe6
 DIST bsnes_v057.tar.bz2 444914 RMD160 2cfb5ca7acfa12931f78628de067ac0046b993e3 SHA1 92a4fc0676c09dda65e33cb730ebc99873395450 SHA256 f423c6c0714ab83fdbaa4aa1f303d847bbbaf77b4353458b09d7ce61f1867b2c
 DIST bsnes_v058.tar.bz2 450201 RMD160 40eac219f7b298356088b14aadbc46e412c9b1b5 SHA1 366826f188d66165aa3965da21ea4ce74ca9072f SHA256 448ec9170628deca66bf3b9260441489418f695f13f2e78b184bed100c11c93e
 DIST bsnes_v059.tar.bz2 345947 RMD160 36a1897bfb213b91de576703b223e7e72ad286ec SHA1 9a7ae7dffabc2d685f22ccc067a5aec42546448e SHA256 370613e1abb8b20fad792ad8c7af29361f8e3e62847d11671d540396f94a3065
+DIST bsnes_v059r02.zip 5418543 RMD160 12ea528f6272bdb0be63e2b6abaafec99a4d189f SHA1 b635b004c99fc8b96caf3cc1df7131a65202c624 SHA256 c17aa0c7bd6309c839786469312e6c658a5388b1d2de41db956684113c9f04b8
 EBUILD bsnes-0.057.ebuild 1959 RMD160 5caf589f7619fdece8c21cc36f4abb41d93b589a SHA1 57569ec0229b254ff7fd8fddeb1ddb222945e9d9 SHA256 85cecef6de0a18d1ffd0f918e97b740ed3c445419cee9211da3c4a69af07111d
 EBUILD bsnes-0.058.ebuild 1959 RMD160 fe41fba909487f0c29db6713e6f4c3c777e4c0b0 SHA1 8fb9e4bbb02d2d805ecc0bab93f2748d3028f832 SHA256 d00d33641103bbfbb8a7f519834ddb408060cec2f12897df4d269d9436ba0953
 EBUILD bsnes-0.059.ebuild 2016 RMD160 ab280ac2cffcbdb245df43ddbde90c78d2616e62 SHA1 ebb825a8587145e8a40dab59d57507095a68999c SHA256 b15b06abac82b68f2bac682a80e75ae7fe8a79c530f446fb113308ad334da7fc
-MISC ChangeLog 5918 RMD160 7955a7db6ee27f4308c72a91c31d52b437680152 SHA1 f0704429d730aab2f382dcbbf8dac7893ef6dbe9 SHA256 25b96b4920dbbcdc4a7eb9e95db4059c38495fd0115dd3624db2f99ba2bb31be
+EBUILD bsnes-0.059_p2.ebuild 2614 RMD160 cd42b1803c8cfe005ecc305af192c3fdb16d0195 SHA1 1beab24c1b0a1aed44238f4f85cc9163e79bc865 SHA256 d926095dcf2912cf53b9d0e39ddffd790895dbf26e9e5835e073b34c7d3842d7
+MISC ChangeLog 6261 RMD160 25be583475598fef50b9f933190c28ff4717f9ac SHA1 1885823a9bd56959446f898fc7f78ce305897f79 SHA256 f71875547092e152a041aab3207218caa4a21fc0687accf6760a2941e88b4ad2
 MISC metadata.xml 566 RMD160 26a851455d9084720b1fa4bac734f22c9541741b SHA1 729bc585b67bad89af5fdb2fc8700a2637082a0f SHA256 5375d24d272cf0bbf3f0d8e38b032888b515c3c66b39d8032faa69a15469b776
