@@ -1,6 +1,14 @@
 # ChangeLog for games-emulation/bsnes
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 
+*bsnes-0.059_p2 (14 Jan 2010)
+
+  14 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> +bsnes-0.059_p2.ebuild:
+  Added latest development snapshot. Since those are packaged with extra
+  libraries, the ebuild blocks on external copies of snesreader, snesfilter
+  and supergameboy, and builds the bundled ones. To my mind, that's the best
+  solution.
+
 *bsnes-0.059 (07 Jan 2010)
 
   07 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> +bsnes-0.059.ebuild:
